--- a/assets/css/florest.css
+++ b/assets/css/florest.css
@@ -1,23 +1,26 @@
 .start {
   height: 100dvh;
+  width: 100%;
   box-sizing: border-box;
   display: grid;
   place-items: center;
-  width: 100%;
   padding-top: 70px;
 }
 
 .start--title {
   font-family: "Protest Guerrilla", sans-serif;
-  font-size: 7rem;
+  font-size: 4rem;
   font-weight: bold;
   font-style: normal;
   color: var(--white);
+  text-align: center;
 }
 
 .start--banner {
   position: absolute;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   box-sizing: border-box;
   z-index: -1;
 }
@@ -30,7 +33,8 @@
   align-items: center;
   max-width: 1080px;
   margin: auto;
-  padding: 150px 36px;
+  padding: 100px 36px;
+  box-sizing: border-box;
 }
 
 .biome {
@@ -40,6 +44,7 @@
 
 .biome-content {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   gap: 36px;
@@ -50,7 +55,7 @@
 }
 
 .biome-content__img {
-  width: 40%;
+  width: 100%;
 }
 
 .region {
@@ -64,6 +69,7 @@
 .region-content {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   width: 100%;
   gap: 36px;
@@ -78,7 +84,7 @@
 }
 
 .region-content__img {
-  width: 40%;
+  width: 100%;
 }
 
 .rivers {
@@ -104,4 +110,33 @@ td {
 }
 th {
   background-color: #f2f2f2;
+}
+
+@media (min-width: 768px) {
+  .start--title {
+    font-size: 7rem;
+  }
+
+  .biome-content {
+    flex-direction: row;
+  }
+
+  .biome-content__img {
+    width: 40%;
+  }
+
+  .start--banner {
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: -1;
+  }
+
+  .region-content {
+    flex-direction: row;
+  }
+
+  .region-content__img {
+    width: 40%;
+  }
 }
